fix bug where we need to split up the mutliclass tables by experiment run

--- a/src/Shared/PerformancePanel.razor
+++ b/src/Shared/PerformancePanel.razor
@@ -9,8 +9,11 @@
     </RadzenStack>
 </RadzenRow>
 <RadzenRow>
-    @if (isComparisonReady && CompareTable is not null)
+    @if (isComparisonReady)
     {
-        <TableView TableModel=@CompareTable />
+        foreach (var compareTable in CompareTables!)
+        {
+            <TableView TableModel=@compareTable />
+        }
     }
 </RadzenRow>
