implement progress indicator

--- a/src/Layout/MainLayout.razor
+++ b/src/Layout/MainLayout.razor
@@ -4,6 +4,7 @@
 <RadzenLayout>
     <ErrorBoundary>
         <ChildContent>
+            <InProgressIndicator />
             <Header />
             <RadzenBody>
                 @Body
