--- a/src/Pages/Experiments/ExperimentsComparison.razor
+++ b/src/Pages/Experiments/ExperimentsComparison.razor
@@ -1,5 +1,6 @@
 ﻿@page "/projects/{ProjectId:guid}/experiments/{ExperimentId:guid}/comparisons"
 @using ExperimentServer.Shared
+<PageTitle>Comparisons</PageTitle>
 <RadzenStack>
     <RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" Gap="0.5rem" AlignItems="AlignItems.Center" class="rz-p-4 rz-mb-6 rz-border-radius-1" Style="border: var(--rz-grid-cell-border); width:100%;">
