--- a/src/Pages/Datasets/DataSetManager.razor
+++ b/src/Pages/Datasets/DataSetManager.razor
@@ -1,5 +1,6 @@
 ﻿@page "/datasets/{DatasetId:guid}"
 @using ExperimentServer.Models
+@using ExperimentServer.Shared
 @if (DataSetModel is not null)
 {
     <PageTitle>Ground Truths - @DataSetModel.DisplayName</PageTitle>
@@ -27,75 +28,87 @@
             </RadzenStack>
         </RadzenRow>
         <RadzenRow>
-            <RadzenDataGrid @ref="@dataGrid" ColumnWidth="200px" AllowFiltering="true" AllowPaging="true" AllowSorting="true" Data="@model.Items">
-                <HeaderTemplate>
-                    <RadzenRow RowGap="0" Style="width:100%">
-                        <RadzenText TextStyle="TextStyle.H6" Class="rz-display-flex rz-align-items-center rz-m-0">
-                            @if (DataSetModel is not null)
-                            {
-                                <RadzenIcon Icon="gavel" class="rz-mr-1" />
-                                <b>@DataSetModel.DisplayName (@model.Items.Count)</b>
-                            }
-                        </RadzenText>
-                    </RadzenRow>
-                </HeaderTemplate>
-                <Columns>
-                    <RadzenDataGridColumn TItem="GroundTruthImage" Title="Name" Width="20px">
-                        <Template Context="entry">
-                            @entry.DisplayName
-                        </Template>
-                    </RadzenDataGridColumn>
-                    @foreach (var field in DataSetModel!.Fields!)
-                    {
-                        <RadzenDataGridColumn TItem="GroundTruthImage" Title=@field.Name Width="20px">
-                            <Template Context="entry">
-                                @{
-                                    var expectedField = entry.Fields!.SingleOrDefault(x => x.Name == field.Name);
-                                    if (expectedField is not null)
-                                    {
-                                        <span>@expectedField.Value</span>
-                                    }
-                                    else
-                                    {
-                                        <span style="color: red">Missing!</span>
-                                    }
-                                }
-                            </Template>
-                        </RadzenDataGridColumn>
-                    }
-                    <RadzenDataGridColumn TItem="GroundTruthImage" Title="Tags" Width="30px">
-                        <Template Context="entry">
-                            @if (entry.Tags is not null)
-                            {
-                                <table>
-                                    <thead>
-                                        <tr>
-                                            <td style="width:60px"><b>Name</b></td>
-                                            <td style="width:100px"><b>Value</b></td>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var tag in entry.Tags)
+            <RadzenTabs RenderMode="TabRenderMode.Client">
+                <Tabs>
+                    <RadzenTabsItem Text="Ground Truths">
+                        <RadzenDataGrid @ref="@dataGrid" ColumnWidth="80px" AllowFiltering="true" AllowPaging="true" AllowSorting="true" Data="@model.Items">
+                            <HeaderTemplate>
+                                <RadzenRow RowGap="0" Style="width:100%">
+                                    <RadzenText TextStyle="TextStyle.H6" Class="rz-display-flex rz-align-items-center rz-m-0">
+                                        @if (DataSetModel is not null)
                                         {
-                                            <tr>
-                                                <td>@tag.Name</td>
-                                                <td>@tag.Value</td>
-                                            </tr>
+                                            <RadzenIcon Icon="gavel" class="rz-mr-1" />
+                                            <b>@DataSetModel.DisplayName (@model.Items.Count)</b>
                                         }
-                                    </tbody>
-                                </table>
-                            }
-                        </Template>
-                    </RadzenDataGridColumn>
-                    <RadzenDataGridColumn TItem="GroundTruthImage" Title="" Width="20px">
-                        <Template Context="entry">
-                            <RadzenButton Click=@(args => Edit(entry)) Text="View" ButtonStyle="ButtonStyle.Primary" />
-                            <RadzenButton Click=@(args => CopyTo(entry)) Text="Copy" ButtonStyle="ButtonStyle.Primary" />
-                            <RadzenButton Click=@(args => DeleteAsync(entry)) Text="Delete" ButtonStyle="ButtonStyle.Danger" />
-                        </Template>
-                    </RadzenDataGridColumn>
-                </Columns>
-            </RadzenDataGrid>
+                                    </RadzenText>
+                                </RadzenRow>
+                            </HeaderTemplate>
+                            <Columns>
+                                <RadzenDataGridColumn TItem="GroundTruthImage" Title="Name" Width="15px">
+                                    <Template Context="entry">
+                                        @entry.DisplayName
+                                    </Template>
+                                </RadzenDataGridColumn>
+                                @foreach (var field in DataSetModel!.Fields!)
+                                {
+                                    <RadzenDataGridColumn TItem="GroundTruthImage" Title=@field.Name Width="15px">
+                                        <Template Context="entry">
+                                            @{
+                                                var expectedField = entry.Fields!.SingleOrDefault(x => x.Name == field.Name);
+                                                if (expectedField is not null)
+                                                {
+                                                    <span>@expectedField.Value</span>
+                                                }
+                                                else
+                                                {
+                                                    <span style="color: red">Missing!</span>
+                                                }
+                                            }
+                                        </Template>
+                                    </RadzenDataGridColumn>
+                                }
+                                <RadzenDataGridColumn TItem="GroundTruthImage" Title="Tags" Width="40px">
+                                    <Template Context="entry">
+                                        @if (entry.Tags is not null)
+                                        {
+                                            <table>
+                                                <thead>
+                                                    <tr>
+                                                        <td style="width:60px"><b>Name</b></td>
+                                                        <td style="width:100px"><b>Value</b></td>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @foreach (var tag in entry.Tags)
+                                                    {
+                                                        <tr>
+                                                            <td>@tag.Name</td>
+                                                            <td>@tag.Value</td>
+                                                        </tr>
+                                                    }
+                                                </tbody>
+                                            </table>
+                                        }
+                                    </Template>
+                                </RadzenDataGridColumn>
+                                <RadzenDataGridColumn TItem="GroundTruthImage" Title="" Width="25px">
+                                    <Template Context="entry">
+                                        <RadzenButton Click=@(args => Edit(entry)) Text="View" ButtonStyle="ButtonStyle.Primary" />
+                                        <RadzenButton Click=@(args => CopyTo(entry)) Text="Copy" ButtonStyle="ButtonStyle.Primary" />
+                                        <RadzenButton Click=@(args => DeleteAsync(entry)) Text="Delete" ButtonStyle="ButtonStyle.Danger" />
+                                    </Template>
+                                </RadzenDataGridColumn>
+                            </Columns>
+                        </RadzenDataGrid>
+                    </RadzenTabsItem>
+                    <RadzenTabsItem Text="Stats">
+                        @if (IsReady)
+                        {
+                            <DataSetStats GroundTruthImages="@model.Items" DataSetModel="@DataSetModel" />
+                        }
+                    </RadzenTabsItem>
+                </Tabs>
+            </RadzenTabs>
         </RadzenRow>
     </RadzenStack>
 }
