--- a/src/Pages/Datasets/EditGroundTruthImage.razor
+++ b/src/Pages/Datasets/EditGroundTruthImage.razor
@@ -144,7 +144,7 @@
         <RadzenRow Gap="2rem" Class="rz-p-0 rz-p-lg-4">
             <RadzenRow Style="width:100%">
                 <RadzenColumn SizeMD="3">
-                    <RadzenStack Visible="@(GroundTruthImages is not null)" Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center" Gap="1rem" Class="rz-mt-8 rz-mb-4">
+                    <RadzenStack Visible="@(Action != "new" && GroundTruthImages is not null)" Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center" Gap="1rem" Class="rz-mt-8 rz-mb-4">
                         <RadzenLabel>@(CurrentIndex + 1) of @(GroundTruthImages!.Count)</RadzenLabel>
                         <RadzenButton Disabled=@(CurrentIndex == 0) ButtonStyle="ButtonStyle.Light" Click=@PreviousImage Size="ButtonSize.Large" Text="Previous" />
                         <RadzenButton Disabled=@(CurrentIndex == GroundTruthImages!.Count-1) ButtonStyle=ButtonStyle.Light Click=@NextImage Size="ButtonSize.Large" Text="Next" />
