implement filtering for ground truths

--- a/src/Pages/Datasets/DataSetManager.razor
+++ b/src/Pages/Datasets/DataSetManager.razor
@@ -41,6 +41,10 @@
                                             <b>@DataSetModel.DisplayName (@model.Items.Count)</b>
                                         }
                                     </RadzenText>
+                                    @if (KeyFilterFields is not null)
+                                    {
+                                        <FiltersPanel Keys=@KeyFilterFields OnUpdates=OnFiltersChanged />
+                                    }
                                 </RadzenRow>
                             </HeaderTemplate>
                             <Columns>
