fix dup key issue in cache, implement tab selection to minimize switching back and fore when navigating results

--- a/src/Pages/Experiments/ExperimentsComparison.razor
+++ b/src/Pages/Experiments/ExperimentsComparison.razor
@@ -8,7 +8,7 @@
         </RadzenStack>
     </RadzenRow>
     <RadzenRow>
-        <RadzenTabs RenderMode="TabRenderMode.Client">
+        <RadzenTabs RenderMode="TabRenderMode.Client" SelectedIndex=@tabSelectedIndex Change=@OnTabChanged>
             <Tabs>
                 <RadzenTabsItem Text="Inputs/Outputs">
                     <RadzenRow>
